Make public presentation database driven
